Scroll, unbuffered prints, pipes and proper logging

--- a/src/kernel/etc/sys.cfg
+++ b/src/kernel/etc/sys.cfg
@@ -1,12 +1,17 @@
 -- /etc/sys.cfg
--- system configuration. don't break this.
 return {
   hostname = "AxisBox",
   
   logging = {
-    enable_screen_log = true, -- print kernel logs to tty during boot
-    ring_buffer_size = 8192,  -- 8kb of log history. enough for a panic stacktrace.
+    enable_screen_log = true,
+    ring_buffer_size = 8192,
     log_device = "/dev/ringlog",
+    
+    -- Persistent log rotation
+    enable_log_rotation_saver = true,
+    max_log_files = 5,         -- keep last N sessions
+    log_dir = "/log",          -- .log files (INFO+ only)
+    vbl_dir = "/vbl",          -- .vbl files (ALL including DEBUG/DEV)
   },
   
   security = {
