xe(sb): fix secureboot token rotation, force m=600 for 'r' handle for keys; fix manifest generation; minify bios properly

--- a/src/kernel/boot/loader.cfg
+++ b/src/kernel/boot/loader.cfg
@@ -5,51 +5,51 @@ return {
     entries = {
         {
             id = "axis",
-            title = "AxisOS v0.35",
+            title = "AxisOS v0.4-beta",
             kernel = "/kernel.lua",
             init = "/bin/init.lua",
             params = {
-                loglevel = "Info",
                 safemode = false,
+                loglevel = "Info",
             },
         },
         {
             id = "axis-safe",
-            title = "AxisOS v0.35 (Safe Mode)",
+            title = "AxisOS v0.4-beta (Safe Mode)",
             kernel = "/kernel.lua",
             init = "/bin/init.lua",
             params = {
-                loglevel = "Debug",
                 safemode = true,
+                loglevel = "Debug",
             },
         },
         {
             id = "axis-verbose",
-            title = "AxisOS v0.35 (Verbose Boot)",
+            title = "AxisOS v0.4-beta (Verbose Boot)",
             kernel = "/kernel.lua",
             init = "/bin/init.lua",
             params = {
-                loglevel = "Debug",
                 safemode = false,
+                loglevel = "Debug",
             },
         },
         {
             id = "axis-nodrivers",
-            title = "AxisOS v0.35 (No Autoload Drivers)",
+            title = "AxisOS v0.4-beta (No Autoload Drivers)",
             kernel = "/kernel.lua",
             init = "/bin/init.lua",
             params = {
-                loglevel = "Info",
-                safemode = true,
                 nodrivers = true,
+                safemode = true,
+                loglevel = "Info",
             },
         },
     },
     drivers_cfg = "/boot/sys/drivers.cfg",
     secureboot = {
         mode = 0,
-        eeprom_template = "/boot/eeprom_template.lua",
-        eeprom_plain = "/boot/eeprom_axfs.lua",
+        eeprom_template = "/boot/boot_secure.lua",
+        eeprom_plain = "/boot/boot.lua",
         require_manifest = false,
         allow_offline = true,
     },
