xe(hv): implement PatchGuard functionality; add third-layer isolation layer; implement bunch of tested changes from local instance
I'm currently implementing PatchGuard: it checks whether function addresses in the syscall table have changed (by comparing 	ostring(func), which in Lua yields a unique function identifier in memory), whether Ring requirements for syscalls have changed (Ring Escalation), and whether IPC processing has been hijacked.

--- a/src/kernel/boot/loader.cfg
+++ b/src/kernel/boot/loader.cfg
@@ -5,7 +5,7 @@ return {
     entries = {
         {
             id = "axis",
-            title = "AxisOS v0.4-beta",
+            title = "AxisOS v0.51",
             kernel = "/kernel.lua",
             init = "/bin/init.lua",
             params = {
@@ -15,7 +15,7 @@ return {
         },
         {
             id = "axis-safe",
-            title = "AxisOS v0.4-beta (Safe Mode)",
+            title = "AxisOS v0.51 (Safe Mode)",
             kernel = "/kernel.lua",
             init = "/bin/init.lua",
             params = {
@@ -25,7 +25,7 @@ return {
         },
         {
             id = "axis-verbose",
-            title = "AxisOS v0.4-beta (Verbose Boot)",
+            title = "AxisOS v0.51 (Verbose Boot)",
             kernel = "/kernel.lua",
             init = "/bin/init.lua",
             params = {
@@ -35,7 +35,7 @@ return {
         },
         {
             id = "axis-nodrivers",
-            title = "AxisOS v0.4-beta (No Autoload Drivers)",
+            title = "AxisOS v0.51 (No Autoload Drivers)",
             kernel = "/kernel.lua",
             init = "/bin/init.lua",
             params = {
