feat(xe): implement AXFS + RDB; getting ready for complete switch from managed drives to unmanaged once

--- a/src/kernel/boot/sys/drivers.cfg
+++ b/src/kernel/boot/sys/drivers.cfg
@@ -22,14 +22,14 @@ return {
         depends     = {},
         description = "RBMK driver",
     },
-    -- {
-    --     name        = "blkdev",
-    --     path        = "/drivers/blkdev.sys.lua",
-    --     enabled     = true,
-    --     priority    = 200,
-    --     depends     = {},
-    --     description = "Unmanaged drive block device driver",
-    -- },
+    {
+        name        = "blkdev",
+        path        = "/drivers/blkdev.sys.lua",
+        enabled     = true,
+        priority    = 200,
+        depends     = {},
+        description = "Unmanaged drive block device driver (required for AXFS)",
+    },
     -- {
     --     name        = "hbm_rbmk",
     --     path        = "/sys/drivers/hbm_rbmk.sys.lua",
