--- a/src/kernel/etc/pki.cfg
+++ b/src/kernel/etc/pki.cfg
@@ -1,7 +1,7 @@
 -- /etc/pki.cfg
 -- PKI Cloud Configuration
 return {
-    api_token = "YOUR_API_TOKEN_HERE",  -- from auth.axis-os.ru
+    api_token = "",  -- from auth.axis-os.ru
     pki_url = "https://pki.axis-os.ru/api",
     
     security_level = 1,  -- 0=disabled, 1=warn, 2=enforce
