--- a/src/kernel/boot/loader.cfg
+++ b/src/kernel/boot/loader.cfg
@@ -5,7 +5,7 @@ return {
     entries = {
         {
             id = "axis",
-            title = "AxisOS v0.6",
+            title = "AxisOS v0.7",
             kernel = "/kernel.lua",
             init = "/bin/init.lua",
             params = {
@@ -15,7 +15,7 @@ return {
         },
         {
             id = "axis-safe",
-            title = "AxisOS v0.6 (Safe Mode)",
+            title = "AxisOS v0.7 (Safe Mode)",
             kernel = "/kernel.lua",
             init = "/bin/init.lua",
             params = {
@@ -25,7 +25,7 @@ return {
         },
         {
             id = "axis-verbose",
-            title = "AxisOS v0.6 (Verbose Boot)",
+            title = "AxisOS v0.7 (Verbose Boot)",
             kernel = "/kernel.lua",
             init = "/bin/init.lua",
             params = {
@@ -35,7 +35,7 @@ return {
         },
         {
             id = "axis-nodrivers",
-            title = "AxisOS v0.6 (No Autoload Drivers)",
+            title = "AxisOS v0.7 (No Autoload Drivers)",
             kernel = "/kernel.lua",
             init = "/bin/init.lua",
             params = {
@@ -50,6 +50,8 @@ return {
         mode = 0,
         eeprom_template = "/boot/boot_secure.lua",
         eeprom_plain = "/boot/boot.lua",
+        axfs_eeprom_template = "/boot/axfs_boot_secure.lua",
+        axfs_eeprom_plain = "/boot/axfs_boot.lua",
         require_manifest = false,
         allow_offline = true,
     },
