--- a/src/kernel/etc/drivers.cfg
+++ b/src/kernel/etc/drivers.cfg
@@ -22,14 +22,14 @@ return {
         depends     = {},
         description = "Internet card network driver",
     },
-    -- {
-    --     name        = "blkdev",
-    --     path        = "/drivers/blkdev.sys.lua",
-    --     enabled     = true,
-    --     priority    = 200,
-    --     depends     = {},
-    --     description = "Unmanaged drive block device driver",
-    -- },
+    {
+        name        = "blkdev",
+        path        = "/drivers/blkdev.sys.lua",
+        enabled     = true,
+        priority    = 200,
+        depends     = {},
+        description = "Unmanaged drive block device driver",
+    },
     -- {
     --     name        = "hbm_rbmk",
     --     path        = "/sys/drivers/hbm_rbmk.sys.lua",
